--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,29 @@
 /* #region-Variables */
 :root {
-    /* cColors */
+    /* Colors */
     --primary-brand-color: #4D5AE5;
-    --primary-text-color: #2E2F42;
-    --description-text: #434455;
+    --primary-dark-color: #2E2F42;
+    --description-slate-text: #434455;
     --subtle-text: #8E8F99;
     --hero-background: #2E2F42B2;
     --white-background: #FFFFFF;
+    --cloud-color: #f4f4fd;
+    --active-ocean-color: #404bbf;
 
     /* Fonts */
     --font-family: "Roboto", sans-serif;
     --second-family: "Raleway", sans-serif;
-        
-}
 
+}
 
 /* #endregion-Variables */
 
 /* #region-Base */
+
 body {
+    /* font-family: monospace; */
     font-family: 'Roboto', sans-serif;
-    color: var(--primary-text-color);
+    color: var(--primary-dark-color);
     background-color: var(--white-background);
 }
 
@@ -28,7 +31,8 @@ a {
     text-decoration: none;
 }
 
-ul, ol {
+ul,
+ol {
     list-style-type: none;
     margin: 0;
 }
@@ -60,60 +64,94 @@ h6,
 p {
     margin: 0;
 }
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
 /* #endregion-Base */
 
-/* #region-Header */
-.header .header-logo {
+/* #region-Common */
+.section {}
+
+.logo {
+    font-family: var(--second-family);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
     color: var(--primary-brand-color);
 }
 
-.header-item {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+.logo-dark {
+    color: var(--primary-dark-color);
 }
+
+.logo-light {
+    color: var(--cloud-color);
+}
+
+/* Socials */
+
+/* Buttons */
+
+.btn {}
+
+/* #endregion */
+
+/* #region-Header */
+
+.header {}
+
+.header-nav {}
+
+.header-logo {}
+
+.header-list {}
+
+.header-item {}
 
 .header-link {
-    color: var(--primary-text-color);
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    line-height: 1.50;
     letter-spacing: 0.02em;
+    color: var(--primary-dark-color);
 }
 
-.header-link {
-    color: var(--primary-text-color);
-}
+.contact-list {}
 
-.contact-item {
-    font-family: var(--font-family);
-    font-size: 16px;
-    line-height: 150%;
+.contact-item {}
+
+.contact-link {
+    line-height: 1.50;
     letter-spacing: 0.02em;
-    color: var(--text-color);
+    color: var(--description-slate-text);
 }
 
-.logo-title {
-    color: var(--primary-text-color);
-    font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-}
-
-.header-link:active,
+.header-link:hover,
 .header-link:focus,
-.contact-link:active,
+.contact-link:hover,
 .contact-link:focus {
-    color: var(--pressed);
+    color: var(--active-ocean-color);
 }
+
 /* #endregion */
 
 /* #region-Hero */
+
 .hero-image {
-    background-color: var(--primary-text-color);
+    background-color: var(--primary-dark-color);
 }
 
 .hero-title {
@@ -125,16 +163,127 @@ p {
     text-align: center;
 }
 
-.hero-button {
-    font-size: 16px;
+.hero-btn {
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: var(--white-background);
     background-color: var(--primary-brand-color);
-
-
 }
+
+.hero-btn:hover,
+.hero-btn:focus {
+    background-color: var(--active-ocean-color);
+}
+
 /* #endregion */
+
+/* #region-Features */
+.features {}
+
+.features-title {}
+
+.features-list {}
+
+.features-item {}
+
+.features-card-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 120%;
+    letter-spacing: 0.02em;
+}
+
+.features-description {
+    line-height: 1.50;
+    letter-spacing: 0.02em;
+    color: var(--description-slate-text);
+}
+
+/* #endregion */
+
+/* #region-Team */
+.team {
+    background-color: var(--cloud-color);
+    /* margin-bottom: 60px; */
+}
+
+.team-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+}
+
+.team-list {}
+
+.team-item {
+    background-color: var(--white-background);
+}
+
+.team-pre-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.20;
+    letter-spacing: 0.02em;
+    text-align: center;
+}
+
+.team-description {
+    line-height: 1.50;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: var(--description-slate-text);
+}
+
+/* #endregion */
+
+/* #region-Portfolio */
+.portfolio {}
+
+.portfolio-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+}
+
+.portfolio-list {}
+
+.portfolio-item {}
+
+.portfolio-pre-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.20;
+    letter-spacing: 0.02em;
+}
+
+.portfolio-text {
+    line-height: 1.50;
+    letter-spacing: 0.02em;
+    color: var(--description-slate-text);
+}
+
+/* #endregion */
+
+/* #region-Footer */
+.footer {
+    background-color: var(--primary-dark-color);
+}
+
+.footer-logo {}
+
+.footer-desription {
+    line-height: 1.50;
+    letter-spacing: 0.02em;
+    color: var(--cloud-color);
+}
+
+/* #endregion */
+
+
 
 /* *============================================================================================================================================== */
 /* #region */
