--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,7 @@ p {
     letter-spacing: 0.02em;
     text-align: center;
     text-transform: capitalize;
+    color: var(--primary-dark-color);
 }
 
 .portfolio-list {}
@@ -264,6 +265,7 @@ p {
     font-size: 20px;
     line-height: 1.20;
     letter-spacing: 0.02em;
+    color: var(--primary-dark-color);
 }
 
 .portfolio-text {
