--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ p {
     margin: 0;
 }
 
-.visually-hidden {
+/* .visually-hidden {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -77,7 +77,7 @@ p {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
-}
+} */
 
 /* #endregion-Base */
 
