--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,8 @@ button {
 }
 
 img {
-    display: block;
-    max-width: 100%;
+    /* display: block; */
+    /* max-width: 100%; */
 }
 
 address {
