--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@
 /* #region-Base */
 
 body {
-    /* font-family: monospace; */
     font-family: 'Roboto', sans-serif;
     color: var(--primary-slate-color);
     background-color: var(--white-background);
@@ -46,10 +45,7 @@ button {
     font-family: inherit;
 }
 
-img {
-    /* display: block; */
-    /* max-width: 100%; */
-}
+img {}
 
 address {
     font-style: normal;
@@ -64,20 +60,6 @@ h6,
 p {
     margin: 0;
 }
-
-/* .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-} */
 
 /* #endregion-Base */
 
@@ -206,7 +188,6 @@ p {
 /* #region-Team */
 .team {
     background-color: var(--cloud-color);
-    /* margin-bottom: 60px; */
 }
 
 .team-title {
